Fix: change overflow and rq header

--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     h1 {
       font-weight: 300;
@@ -69,21 +69,21 @@
     }
     .center {
       height: 350px;
-      overflow: scroll;
+      overflow: auto;
       padding: 20px;
       display: flex;
       flex-direction: column;
       gap: 20px;
 
-      .chatMessage{
+      .chatMessage {
         width: 50%;
 
-        &.own{
+        &.own {
           align-self: flex-end;
           text-align: right;
         }
 
-        span{
+        span {
           font-size: 12px;
           background-color: #f7c14b39;
           padding: 2px;
@@ -98,15 +98,15 @@
       align-items: center;
       justify-content: space-between;
 
-      textarea{
-        flex:3;
+      textarea {
+        flex: 3;
         height: 100%;
         border: none;
-        padding: 20px;
+        padding: 16px 20px;
       }
 
-      button{
-        flex:1;
+      button {
+        flex: 1;
         background-color: #f7c14b85;
         height: 100%;
         border: none;
