--- a/src/routes/hotelCreate/hotelCreate.scss
+++ b/src/routes/hotelCreate/hotelCreate.scss
@@ -4,7 +4,7 @@
 
   & .formContainer {
     flex: 3;
-    overflow: scroll;
+    overflow: auto;
 
     & .wrapper {
       margin: 30px 50px 100px 0px;
